<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>engineer_vision</name>
  <version>0.0.0</version>
  <description>Image processing using YOLO</description>
  <maintainer email="kankefengjing@gmail.com">robomaster</maintainer>
  <license>GPLv3</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>geometry_msgs</depend>
  <depend>vision_interface</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
